@@ -7,6 +7,7 @@ OpenLDAP 2.2.15 Engineering
 	Fixed back-hdb dn2id bug with unsigned chars
 	Fixed back-ldap shared connections failover (ITS#3217)
 	Fixed back-ldap validate/pretty values (ITS#3218)
+	Fixed back-monitor/backglue clash in tool mode (ITS#3254)
 	Fixed slapi slapi_int_compute_output_ber attrs bug
 	Fixed slapd uniqueMember/nameUID bugs (ITS#3210)
 	Fixed slapd uniqueMemberMatch empty DN portion bug (ITS#3247)
@@ -23,8 +24,8 @@ OpenLDAP 2.2.15 Engineering
 	Fixed libldap matchedValues parsing bug (ITS#3208,3216)
 	Fixed libldap DN '=' handling
 	Fixed libldap_r runqueue bug
-	Updated libldap_r read/writer locks
 	Fixed librewrite empty rewriteContext leak (ITS#3256)
+	Updated libldap_r read/writer locks
 	Build environments
 		Added additional res_query detection for MacOS X
 		Added default ldapi:// SSF build setting
